fixed vote shift tool css bug while blockchain call is being made

--- a/app/assets/javascripts/bundle.scss
+++ b/app/assets/javascripts/bundle.scss
@@ -3,7 +3,8 @@
   left: 20px; }
   .vote-shift-tool-container .vote-bar,
   .vote-shift-tool-container .vote-bar-loading {
-    box-sizing: border-box;
+    box-sizing: content-box;
+    border: 1px solid #aa7a60;
     background-color: #aa7a60;
     margin: 40px 20px 80px 20px;
     position: relative;
@@ -11,11 +12,9 @@
     .vote-shift-tool-container .vote-bar .vote-bar-inner-container,
     .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container {
       display: flex;
-      justify-content: space-between;
-      padding: 5px; }
+      justify-content: space-between; }
       .vote-shift-tool-container .vote-bar .vote-bar-inner-container .vote-bar-applied,
       .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-applied {
-        box-sizing: border-box;
         background-color: #61aba9; }
       .vote-shift-tool-container .vote-bar .vote-bar-inner-container .vote-bar-shift-line,
       .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-shift-line {
@@ -36,22 +35,18 @@
           width: 50px; }
       .vote-shift-tool-container .vote-bar .vote-bar-inner-container .vote-bar-freedup,
       .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-freedup {
-        box-sizing: border-box;
         background-color: #fff; }
   .vote-shift-tool-container .vote-bar-loading {
-    background-color: #fff;
-    border: 1px solid #aa7a60; }
-    .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container {
-      padding: 4px; }
-      .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-applied {
-        background-color: #fff;
-        border: 1px solid #61aba9; }
-      .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-freedup {
-        border: 1px solid #aa7a60; }
+    background-color: #fff; }
+    .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-applied {
+      background-color: #fff;
+      border: 1px solid #61aba9; }
+    .vote-shift-tool-container .vote-bar-loading .vote-bar-inner-container .vote-bar-freedup {
+      border: 1px solid #aa7a60; }
   .vote-shift-tool-container .vote-shift-tool-log-button {
     position: absolute;
     right: -5px;
-    height: 25px;
+    height: 27px;
     top: 40px;
     z-index: 10;
     color: #a29b92;
