--- a/frontend/components/entities/dashboard/project_dashboard/votes_view/vote_shift_tool.scss
+++ b/frontend/components/entities/dashboard/project_dashboard/votes_view/vote_shift_tool.scss
@@ -6,7 +6,8 @@
 
   .vote-bar,
   .vote-bar-loading {
-    box-sizing: border-box;
+    box-sizing: content-box; 
+    border: 1px solid #aa7a60;
     background-color: #aa7a60;
     margin: 40px 20px 80px 20px;
     position: relative;
@@ -15,10 +16,8 @@
     .vote-bar-inner-container {
       display: flex;
       justify-content: space-between;
-      padding: 5px;
 
       .vote-bar-applied {
-        box-sizing: border-box;
         background-color: #61aba9;
       }
 
@@ -43,7 +42,6 @@
       }
 
       .vote-bar-freedup {
-        box-sizing: border-box;
         background-color: #fff;
       }
     }
@@ -52,10 +50,8 @@
   
   .vote-bar-loading {
     background-color: #fff;
-    border: 1px solid #aa7a60;
 
     .vote-bar-inner-container {
-      padding: 4px;
       
       .vote-bar-applied {
         background-color: #fff;
@@ -71,7 +67,7 @@
   .vote-shift-tool-log-button {
     position: absolute;
     right: -5px;
-    height: 25px;
+    height: 27px;
     top: 40px;
     z-index: 10;
     color: #a29b92;
